--- a/resume.html
+++ b/resume.html
@@ -10,31 +10,33 @@
         <h2>Office Manager</h2>
             <p><strong>As a Manager, I implement and maintain procedures/office administrative systems that essentially assist in the seemless running of a department on a day-to-day basis.</strong></p>
               <img src="earika.jpg" alt="Earika"/>
+              <p><a href="mailto:elcenord@gmail.com">Elcenord@gmail.com</a></p>
+              <p><em>305.763.9238</em></p><br>
     </header>
 
 <nav>
-  <p><a href="#education">EDUCATION</a></p>
-  <p><a href="#skills">SKILLS</a></p>
-  <p><a href="#experience">EXPERIENCE</a></p>
+  <p><a href="#education">EDUCATION</a><br>
+  <a href="#skills">SKILLS</a><br>
+  <a href="#experience">EXPERIENCE</a></p><br>
 </nav>
 <main>
   <section id ="education">
     <h3>EDUCATION</h3>
     <article>
-          <h4>University of Miami</h4>
-          <p><strong>Coral Gables, FL</strong></p>
-          <p><em>Major: General Studies</em></p>
-          <p>Present</p>
+      <h4>University of Miami</h4>
+        <p>Coral Gables, FL</p>
+        <p><em>Major: General Studies</em></p>
+        <p>Present</p>
   </article>
 <article>
-    <h4>Miami Southridge Senior High</h4>
-    <p><strong>Miami, FL</strong></p>
+<h4><strong>Miami Southridge Senior High</strong></h4>
+    <p>Miami, FL</p>
     <p><em>High School Diploma</em></p>
     <p>1997</p>
 </article>
 </section>
   <section id="skills">
-    <h3>SKILLS</h3>
+    <br><h3>SKILLS</h3>
     <ul>
       <li>Written and verbal communication skills</li>
       <li>Leadership</li>
@@ -42,15 +44,15 @@
       <li>Advanced Problem Solving</li>
       <li>Project Management</li>
       <li>Social Media Management</li>
-  </ul>
+  </ul><br>
   </section>
   <section id="experience">
 <h3>EXPERIENCE</h3>
 <article>
   <h4>University of Miami</h4>
-    <p><strong>Coral Gables, FL</strong></p>
+    <p>Coral Gables, FL</p>
     <p>2014- Present</p>
-    <h4>Office Manager</h4>
+    <h4><em>Office Manager</em></h4>
       <p><strong>Rosenstiel School of Marine & Atmospheric Science Undergraduate Programs</strong></p>
 
     <p><em>Perform executive level management and administrative duties to include the following:</em></p>
@@ -71,8 +73,8 @@
   </ul>
 </article>
 <article>
-<p>2012- Present</p>
-  <h4>Administrative Assistant</h4>
+<p>2012- 2014</p>
+  <h4><em>Administrative Assistant</em></h4>
     <p><strong>Dean of Students Office</strong></p>
     <p><em>Performed administrative duties listed above, as well as the following:</em></p>
 
@@ -92,8 +94,7 @@
 </section>
 </main>
 <footer>
-  <p><a href="mailto:elcenord@gmail.com">Elcenord@gmail.com</a></p>
-  <p><em>305.763.9238</em></p>
+
 </footer>
 
 </body>
