--- a/index.html
+++ b/index.html
@@ -1,21 +1,41 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-      <meta charset="UTF-8"/>
-      <title>My First Webpage</title>
+    <meta charset="UTF-8"/>
+    <link href="css/style.css" rel="stylesheet"/>
+    <title>Candles in the Making</title>
   </head>
 
   <body>
-
-    <header>
-    <h1>Earika Adams</h1>
-
-    <p><strong>This is my very first webpage about books; the memories and emotions</strong></p>
-
-    <p><wordwrap>Have you ever sat down and thought about a place that you have only visited in your imagination? This happens to me a quit often.  I used to love to read (when I actually had time.)  Sometimes I find myself thinking about a scene in a novel that I read over 10 years ago.  The feelings that flowed through when I read it the first time tend to resurface</wordwrap> </p>
-
-    <img src="octocat.png" alt="Octocat"
+   <div id="wrapper">
+     <header>
+       <h1>Candles in the Making</h1>
+      <h2><em>REIMAGINE. REINVENT. REILLUMINATE.</em></h2>
+      <p>Reimagine your favorite vessel. Reinvent your favorite candle. Reilluminate the room.</p>
     </header>
-  </body>
+    <main>
 
-</html>
+    <!-- <div id="box1"> -->
+      <section class="box1">
+        <p><a href="reimagine.html">REIMAGINE</a></p>
+      </section>
+    <!-- </div> -->
+
+    <!-- <div id="box2"> -->
+      <section class="box2">
+        <p><a href="reinvent.html">REINVENT</a></p>
+      </section>
+    <!-- </div> -->
+
+    <!-- <div id="box3"> -->
+      <section class="box3">
+        <p><a href="reilluminate.html">REILLUMINATE</a></p>
+      </section>
+    <!-- </div> -->
+    <p class="message">You need a browser that supports CSS Grid! Why not <a href="https://browsehappy.com/">download</a> a browser which does?</p>
+    <p class="message">Photo Credit: Unsplash.com (Flame by Paul Bujai)</p>
+    </main>
+  </div>
+
+    </body>
+  </html>
