--- a/Responsive site/index.html
+++ b/Responsive site/index.html
@@ -3,13 +3,17 @@
   <head>
     <meta charset="UTF-8"/>
     <link href="css/style.css" rel="stylesheet"/>
+    <link rel="stylesheet" media="only screen and (max-width: 480px)" href="css/mobile.css">
+    <meta name="viewport" content="initial-scale=1">
     <title>Candles in the Making</title>
   </head>
 
   <body>
    <div id="wrapper">
      <header>
+
        <h1>Candles in the Making</h1>
+       <br>
       <h2><em>REIMAGINE. REINVENT. REILLUMINATE.</em></h2>
       <p>Reimagine your favorite vessel. Reinvent your favorite candle. Reilluminate the room.</p>
 
@@ -23,15 +27,8 @@
 
       <div id="box1info">
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <p>When I decided to create this site I had to explain my goal to my friends. Many didn't understand why I was encouraging others to reuse candle containers.  The amount of waste created from candle containers do not rival water bottles, but they are not as recyclable.  Especially glass containers with tinted or colored glass.  This is why I consider a few things before purchasing a candle:  Is the container recyclable, will I reuse this container for another candle, can i reimagine this container as anything else besides a candle. The answer is usually,"I can reimagine this container with another scent".  Sorry, that wasn't one of the questions I ask myself, but it is the usual answer.  If you are like me, you have searched high and low on the internet to find out how to reuse a container reimagined.  You may find a lot of ideas on Pinterest, but no real answers about how to do it.  It makes me wonder if it is prohibited.  If I purchased a 3-wick candle soy candle, why can't I remake a 3-wick soy candle.  No one really wants to provide instructions on how to remake a candle because there are too many variables.  The original manufacturer may have used a soy blend that keeps the heating temperature down to prevent the container from overheating. You may decide to use paraffin or beeswax and cause major damage.  Please be mindful of the type of candles you buy and stick with the same type for refills.  As for me, I like to make custom candles to fit my old containers.  I also like to hand pour my own aromatherapy candles.  Reimagining great work is what I like to do, and if you are interested in breathing new life into a candle that has lost its light join me on this journey of candles in the making: Reinvent, Reimagine, Reilluminate. </p>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 
 
@@ -46,16 +43,28 @@
     <!-- </div> -->
           <div id="box2info">
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>In order to reuse your favorite container you must first remove the old wax residue.  There are many ways to do this, I like to use hot water from my tea kettle. </p>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <ul>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <li>Step 1:
+    	        Bring water to a boil in a kettle (a small pot can be used if you do not have a kettle).</li>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <li>Step 2:
+    	        Use a spatula or a butter knife to remove as much wax from around the inside of the container.</li>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <li>Step 3: (optional)
+    	        If you are using a container with a wide bottom and narrow opening make an "X" imprint the wax bottom as deep as you can. Do not force, as we do not want to distroy the container.</li>
 
+         <li>Step 4:
+    	       Place the container on a flat surface with a heat resistant cloth under it. For your protection.</li>
+
+        <li>Step 5:
+    	      Fill the container with the hot water half way.  Let sit for 20 minutes or until the wax 	begins to float to the top. </li>
+
+        <li>Step 6: Remove floating wax from water, pour water out, and wipe container down with candle wax remover (i.e., De-Solv-it!)</li>
+
+      </ul>
 
 
     <h1 ><a id="box2close" href="#box2">X</a></h1>
@@ -66,15 +75,8 @@
       </section>
         <div id="box3info">
 
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Someone bought a candle for me as a gift for Christmas.  It came in a beautiful burgandy and silver tin container, and had a delightful scent.  I went home and lit it immediately.  The scent lit up the place very nicely. Unfortunately, it burned way faster than i am used too.  The beautiful tin container was still in great condition and I didn't want to throw it away. I usually have this problem with flower vases, which is why i have an overwhelming amount of them. So i pondered,"what can I do with this beautiful container?".  I decided to repurpose it.  But how? I wasn't sure if I wanted to make another candle or just use the beautiful container for something else.  Since it was a tin container and I loved the way the light hit the sides of the container and reflected on various walls in the room.  It was unpredictable.  A decision was made. I cleaned the wax from the container and replaced it with a 3-wick pillar candle.  Once I measured it and cut it down to fit the container it was perfect.  I spent less than $10 to reimagine and recreate another candle that I love.  I kind of love it a little more since I reimagined it with one of my favorite long-burning highly scented candles.
+          </p>
 
 
 
