--- a/Responsive site/index.html
+++ b/Responsive site/index.html
@@ -88,7 +88,7 @@
 
     <p class="message">You need a browser that supports CSS Grid! Why not <a href="https://browsehappy.com/">download</a> a browser which does?</p>
     <p class="message">Photo Credit: Unsplash.com (Flame by Paul Bujai)</p>
-
+    </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript">
