--- a/final_project/final_project/index.html
+++ b/final_project/final_project/index.html
@@ -28,12 +28,13 @@
 				<div class="scroll">
 
 
-					<section class="panel" id="panel-1">
+					<section class="panel color" id="panel-1">
 
 						<h2><a href="">Greetings</h2>
 
-            <!-- <div class="box1info"> -->
-						<p>Welcome, my name is Earika L. Adams. A true sagittarius, explorer of life, love, and unique experiences.  I hope you enjoy my site. It was truly a joy to build it. </p>
+
+            <p>Welcome, my name is Earika L. Adams. A true sagittarius, explorer of life, love, and unique experiences.  I hope you enjoy my site. It was truly a joy to build it. </p>
+
               </section>
           <!-- </div>
           <div class="text"><a id="box1close" href="#box1">close</a> -->
