--- a/final_project/final_project/index.html
+++ b/final_project/final_project/index.html
@@ -2,10 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+
     <meta name="Earika" content="Portfolio">
+
     <link href="css/style.css" rel="stylesheet"/>
+
   <link rel="stylesheet" media="only screen and (max-width: 480px)" href="css/mobile.css">
+
   <meta name="viewport" content="initial-scale=1">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-142958296-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-142958296-1');
+</script>
+
     <title>Earika Adams|Profile</title>
 
   </head>
@@ -47,15 +62,15 @@
 
 
 
-              <!-- href="http://earikaadams.me/CIM111/HW/resume/index.html" -->
-						<h2><a id="box2close">Resume</a></h2>
+
+						<h2><a id="box2close" href="http://earikaadams.me/CIM111/HW/resume/index.html">Resume</a></h2>
 
 
               <div class="text" id="resume">
 
-                <iframe src="http://earikaadams.me/CIM111/HW/resume/index.html" width="80%"></iframe>
+                <!-- <iframe src="http://earikaadams.me/CIM111/HW/resume/index.html" width="80%"></iframe> -->
 
-						<!-- <p>For an overview of my work experience and skills feel free to check out my resume.</p> -->
+						<p>For an overview of my work experience and skills feel free to check out my resume.</p>
 
           </div>
 					</section>
