--- a/css-project/resume.html
+++ b/css-project/resume.html
@@ -58,6 +58,7 @@
         <li>Adobe Creative Cloud (Acrobat, Illustrator, Photoshop, InDesign, and Spark)</li>
         <li>HTML</li>
         <li>CSS</li>
+        <li>CMS</li>
         <li>WordPress</li>
         <li>PeopleSoft</li>
         <li>Oracle</li>
@@ -73,11 +74,15 @@
 
 
           <ul>
-            <li>Design layouts for print publications and Web sites.</li>
+            <li>Design layouts for print publications, CMS Newsletters, Social Media Platforms, and Websites.</li>
             <li>Manage social media account (Facebook) with current affairs, and upcoming events</li>
-            <li>Manage costs, schedules and quality by overseeing project deliverables.</li>
-            <li>Coordinate and manage technology rollout schedules and timelines and develop, review and monitor project tracking.</li>
-            <li>Update department website with accurate up-to-date content and high quality images ensuring all pages are functional and eliminating broken links.</li>
+            <li>Manage costs, schedules, and quality by overseeing project deliverables.</li>
+            <li>Coordinate and manage technology rollout schedules and timelines.
+            <li>Develop, review, and monitor project tracking.</li>
+            <li>Update and maintain department website with accurate up-to-date content and high quality images ensuring all pages are functional and eliminating broken links.</li>
+            <li>Analyze Google Analytics reports to see which webpages are effective or require changes to maintain a low bounce rate and increase returning users</li>
+            
+            
           </ul>
 
       <h4>Office Management & Support</h4>
@@ -86,7 +91,10 @@
           <li>Manage office daily operations, providing customer service, supervision and coordination of special projects to include: domestic and international travel arrangements as well as research cruise and field trip logistics.</li>
           <li>Expertise in troubleshooting issues, deciphering problems and recommending possible alternative solutions.</li>
           <li>Assisting with fiscal management of accounts; Reconcile expenses, correct inaccurate charges, and maintain files and logs for all financial documents</li>
-          <li>Order office supplies and maintain inventory.</li>
+          <li>Order office supplies and maintain department inventory.</li>
+          <li>Created and maintain program Sharepoint page to include important links, calendars, and forms. </li>
+          <li>Manage a team of 4 student employees in the office </li>
+          <li>Manage a digital marketing team of 2 freelance student employees</li>
         </ul>
     </article>
     </section>
